V1.8 Added & Fixed: Logout Button, Fix Checkout Bug, Grid Options and Hide Scrollbar

--- a/static/style.css
+++ b/static/style.css
@@ -15,7 +15,29 @@ body::-webkit-scrollbar {
 }
 
 
+.logout-btn {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    padding: 6px 6px;
+    background-color: #d32f2f; /* Red for log out */
+    color: white;
+    font-size: 1.2rem;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    text-align: center;
+    
+}
 
+.logout-btn:hover {
+    background-color: #c62828;
+}
+
+.logout-btn:active {
+    transform: scale(1);
+}
 header {
     display: flex;
     justify-content: space-between;
